--- a/client/src/pages/appointment/appointment.html
+++ b/client/src/pages/appointment/appointment.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>life care</title>
+  <title>life care | </title>
   <link rel="shortcut icon" href="../../assets/pics/favicon.jpg" type="image/x-icon">
   <link rel="stylesheet" href="../../../dist/output.css">
   <link rel="stylesheet" href="../../../node_modules/bootstrap/dist/css/bootstrap.min.css">
