--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,7 @@
 <body>
     <header class="header container-fluid bg-main1 p-2 px-5 row justify-between">
         <div class="col-4 mr-4 flex justify-between">
-            <a class="text-text mx-2 text-sm" href="src/pages/login/login.html">Login <i class="text-prim mr-3 fas fa-user"></i></a>
+            <a class="text-text mx-2 text-sm" href="src/pages/registration/registration.html">Login <i class="text-prim mr-3 fas fa-user"></i></a>
             <a class="text-text mx-2 text-sm" href="">16781 <i class="text-prim mr-3 fas fa-phone"></i></a>
             <a class="text-text mx-2 text-sm" href="">info@shifaegypt.com <i
                     class="text-prim mr-3 fas fa-envelope"></i></a>
