--- a/client/src/pages/registration/registration.html
+++ b/client/src/pages/registration/registration.html
@@ -16,74 +16,109 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container-fluid">
     <div class="contant">
+      <div id="messageoverlay" class="messageoverlay">
+        <div id="message" class="message" role="alert">
+          <i id="closeMessage" class="fas fa-times-circle"></i>
+          <span id="spanMessage" class="d-block text-4xl"></span>
+        </div>
+      </div>
+      <div class="btnnav">
+        <a href=""><i class="fa-solid fa-user-tie"></i></a>
+        <a href=""><i class="fa-solid fa-user-doctor"></i></a>
+      </div>
       <div class="div-img"></div>
-      <form class="signup" action="">
-        <h2 class="text-center">Join Us</h2>
-        <div class="row g-3 mb-3">
-          <div class="col-md-6">
-            <label for="fname" class="form-label">First Name</label>
-            <div class="input-div">
-              <input type="text" class="form-control" id="fname">
-              <span></span>
-              <i class="fas fa-check-circle text-green-600 right"></i>
-              <i class="fa-solid fa-circle-xmark text-red-500 wrong"></i>
-            </div>
+      <form id="loginForm" class="login" method="post" enctype="multipart/form-data" action="{% url 'register' %}">
+        <h2 class="text-center">Welcome Back</h2>
+        <div class="mb-3">
+          <label for="loginUsername" class="form-label">Email address</label>
+          <div class="input-div">
+            <input type="email" class="form-control" id="loginUsername" name="loginUsername"
+              aria-describedby="emailHelp">
+            <span class="loginerrormessage"></span>
           </div>
-          <div class="col-md-6">
-            <label for="lname" class="form-label">Last Name</label>
-            <div class="input-div"> <input type="text" class="form-control" id="lname">
-              <span></span>
-              <i class="fas fa-check-circle text-green-600 right"></i>
-              <i class="fa-solid fa-circle-xmark text-red-500 wrong"></i>
-            </div>
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputPassword1" class="form-label">Password</label>
+          <div class="input-div">
+            <input type="password" class="form-control" id="exampleInputPassword1">
+            <span class="loginerrormessage"></span>
 
           </div>
         </div>
-        <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Email address</label>
-          <div class="input-div">
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            <span></span>
-            <i class="fas fa-check-circle text-green-600 right"></i>
-            <i class="fa-solid fa-circle-xmark text-red-500 wrong"></i>
-          </div>
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
-          <div class="input-div">
-            <input type="password" class="form-control" id="exampleInputPassword1">
-            <span></span>
-            <i class="fas fa-check-circle text-green-600 right"></i>
-            <i class="fa-solid fa-circle-xmark text-red-500 wrong"></i>
-          </div>
-        </div>
-        <button type="submit" class="p-2 mb-3">Sign in</button>
-        <p class="">Already have an account? <a href="#" id="btnlogin">Log in</a></p>
-      </form>
-      <form class="login" action="">
-        <h2 class="text-center">Welcome Back</h2>
-        <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Email address</label>
-          <div class="input-div">
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            <span></span>
-            <i class="fas fa-check-circle text-green-600 right"></i>
-            <i class="fa-solid fa-circle-xmark text-red-500 wrong"></i>
-          </div>
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
-          <div class="input-div">
-            <input type="password" class="form-control" id="exampleInputPassword1">
-            <span></span>
-            <i class="fas fa-check-circle text-green-600 right"></i>
-            <i class="fa-solid fa-circle-xmark text-red-500 wrong"></i>
-          </div>
-        </div>
-        <button type="submit" class="p-2 mb-5">Log In</button>
+        <button type="submit" name="login_submit" value="login_submit" class="p-2 mt-5 mb-5">Log In</button>
         <p class="">Create an account? <a href="#" id="signbtn">Sign in</a></p>
+      </form>
+      <!-- //////////////////////////////////// -->
+      <form class="signup" id="signupForm" method="post" enctype="multipart/form-data" action="{% url 'register' %}"
+        autocomplete="">
+        <h2 class="text-center">Join Us</h2>
+        <div class="mb-3">
+          <label for="signupUsername" class="form-label">Username :</label>
+          <div class="input-div">
+            <input type="text" class="form-control" id="signupUsername" name="signupUsername"
+              aria-describedby="emailHelp">
+            <span class="errormessage"></span>
+          </div>
+        </div>
+        <div class="mb-3">
+          <label for="signupEmail" class="form-label">Email address :</label>
+          <div class="input-div">
+            <input type="email" class="form-control" id="signupEmail" name="signupEmail" aria-describedby="emailHelp">
+            <span class="errormessage"></span>
+          </div>
+        </div>
+        <div class="mb-3">
+          <label for="signupTel" class="form-label">Phone Number :</label>
+          <div class="input-div">
+            <input type="tel" class="form-control" id="signupTel" name="signupTel" value="+20">
+            <span class="errormessage"></span>
+          </div>
+        </div>
+        <div class="mb-3">
+          <label for="signupPassword" class="form-label">Password :</label>
+          <div class="input-div">
+            <input type="password" class="form-control" id="signupPassword" name="signupPassword">
+            <span class="errormessage"></span>
+            <i class="passwordeye fa-solid fa-eye-slash"></i>
+          </div>
+        </div>
+        <div class="mb-3">
+          <label for="confirmPassword" class="form-label">Confirm Password :</label>
+          <div class="input-div">
+            <input type="password" class="form-control" id="confirmPassword" name="confirmPassword">
+            <span class="errormessage"></span>
+            <i class="passwordeye fa-solid fa-eye-slash"></i>
+          </div>
+        </div>
+        <div class="mb-3">
+          <label for="signupAge" class="form-label">Age :</label>
+
+          <div class="input-div">
+            <input type="text" class="form-control" id="signupAge" name="signupAge">
+            <span class="errormessage"></span>
+          </div>
+        </div>
+        <div class="col-sm-10 mb-3">
+          <h5>Gender:</h5>
+          <div class="form-check">
+            <input class="form-check-input accent-lgreen" type="radio" name="gender" id="male" value="male" checked>
+            <label class="form-check-label" for="male">
+              Male </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input accent-lgreen" type="radio" name="gender" id="female" value="female">
+            <label class="form-check-label" for="female">
+              Female </label>
+          </div>
+        </div>
+        <button type="submit" id="signup_submit" name="signup_submit" value="signup_submit" class="p-2 mb-3">Sign
+          in</button>
+        <p class="">Already have an account? <a href="#" id="btnlogin">Log in</a></p>
+        <div id="formError" class="alert alert-danger d-none" role="alert">
+          A simple danger alert—check it out!
+        </div>
       </form>
     </div>
   </div>
