--- a/client/index.html
+++ b/client/index.html
@@ -19,8 +19,8 @@
     <header class="header container-fluid bg-main1 p-2 px-5 row justify-between">
         <div class="col-4 mr-4 flex justify-between">
             <a class="text-text mx-2 text-sm" href="src/pages/registration/registration.html">Login <i class="text-prim mr-3 fas fa-user"></i></a>
-            <a class="text-text mx-2 text-sm" href="">16781 <i class="text-prim mr-3 fas fa-phone"></i></a>
-            <a class="text-text mx-2 text-sm" href="">info@shifaegypt.com <i
+            <a class="text-text mx-2 text-sm" >16781 <i class="text-prim mr-3 fas fa-phone"></i></a>
+            <a class="text-text mx-2 text-sm" >info@shifaegypt.com <i
                     class="text-prim mr-3 fas fa-envelope"></i></a>
         </div>
         <div class="col-4 ml-4 text-end">
@@ -33,7 +33,7 @@
     <!-- /////////////////////////////////////nav///////////////////////////////////// -->
     <nav id="navbarr" class="navbarr container-fluid bg-main1">
         <div class="navbarr__content container pt-2 h-100 flex items-center  justify-between">
-            <a href="" class="d-block col-1"><img src="./src/assets/pics/logo.png" width="80" alt=""></a>
+            <a href="index.html" class="d-block col-1"><img src="./src/assets/pics/logo.png" width="80" alt=""></a>
             <div id="hideNav" class="navbarr__hideNav col-1">
                 <span id="navBargure1"></span>
                 <span id="navBargure2"></span>
@@ -48,22 +48,22 @@
                         <div id="navbarr__dropdown" class="navbarr__dropdown p-4 justify-between">
                             <ul class="">
                                 <li class="pb-3"><a class="text-text hover:text-prim"
-                                        href="src/pages/departments/heart/heart.html">Cardiology department</a></li>
-                                <li class="pb-3"><a class="text-text hover:text-prim" href="#">brain and nerves</a>
+                                        href="src/pages/departments/Cardiology department/cardiology.html">Cardiology department</a></li>
+                                <li class="pb-3"><a class="text-text hover:text-prim" href="src/pages/departments/brain and nerves/brainandnerves.html">brain and nerves</a>
                                 </li>
-                                <li class="pb-3"><a class="text-text hover:text-prim" href="#">Intensive care</a>
+                                <li class="pb-3"><a class="text-text hover:text-prim" href="src/pages/departments/Intensive care/Intensivecare.html">Intensive care</a>
                                 </li>
                             </ul>
                             <ul class="">
-                                <li class="pb-3"><a class="text-text hover:text-prim" href="#">Surgery</a></li>
-                                <li class="pb-3"><a class="text-text hover:text-prim" href="#">Internal diseases
+                                <li class="pb-3"><a class="text-text hover:text-prim" href="src/pages/departments/Surgery/Surgery.html">Surgery</a></li>
+                                <li class="pb-3"><a class="text-text hover:text-prim" href="src/pages/departments/Internal diseases/Internaldiseases.html">Internal diseases
                                     </a>
                                 </li>
-                                <li class="pb-3"><a class="text-text hover:text-prim" href="#">eyes illnesses</a></li>
+                                <li class="pb-3"><a class="text-text hover:text-prim" href="src/pages/departments/Emergency/Emergency.html">Emergency</a></li>
                             </ul>
                         </div>
                     </li>
-                    <li><a class="text-text hover:text-prim" href="src/pages/doctors/doctors.html">Doctors</a></li>
+                    <li><a class="text-text hover:text-prim" href="src/pages/doctor/doctor.html">Doctors</a></li>
                     <li><a class="text-text hover:text-prim" href="">Specialties and procedures</a></li>
                 </ul>
                 <ul class="navbarr__ul2 me-auto p-2">
