--- a/client/src/pages/registration/registration.html
+++ b/client/src/pages/registration/registration.html
@@ -26,7 +26,7 @@
       </div>
       <div class="btnnav">
         <a href=""><i class="fa-solid fa-user-tie"></i></a>
-        <a href=""><i class="fa-solid fa-user-doctor"></i></a>
+        <a href="../doctor-login/doctor-login.html"><i class="fa-solid fa-user-doctor"></i></a>
       </div>
       <div class="div-img"></div>
       <form id="loginForm" class="login" method="post" enctype="multipart/form-data" action="{% url 'register' %}">
